--- a/application-test.properties
+++ b/application-test.properties
@@ -6,9 +6,9 @@ spring.servlet.multipart.enabled=true
 # 是否支持文件写入磁盘
 spring.servlet.multipart.file-size-threshold=0
 # 最大支持上传文件大小
-spring.servlet.multipart.max-file-size=100Mb
+spring.servlet.multipart.max-file-size=100MB
 # 最大支持请求大小
-spring.servlet.multipart.max-request-size=1024Mb
+spring.servlet.multipart.max-request-size=1024MB
 
 # 数据库配置
 spring.datasource.url=jdbc:mysql://47.103.107.116:3306/eshop?useUnicode=true&serverTimezone=Asia/Shanghai&characterEncoding=utf-8&useSSL=false&allowMultiQueries=true
